--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -116,7 +116,7 @@
       </div>
       <section class="car-block-wrap padding-loans">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to "#", method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Credit Card</h1>
@@ -127,7 +127,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to personal_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Personal Loan</h1>
@@ -138,7 +138,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to "#", method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Transfer Personal Loan</h1>
@@ -149,7 +149,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to business_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Business Loan</h1>
@@ -160,7 +160,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to professional_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Professional Loan</h1>
@@ -171,7 +171,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to home_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Home Loan</h1>
@@ -184,7 +184,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to "#", method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Transfer Home Loan</h1>
@@ -195,7 +195,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to loan_against_property_path('step1'), method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Loan Against Property</h1>
@@ -206,7 +206,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to new_car_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">New  Car Loan</h1>
@@ -217,7 +217,7 @@
               </div>
             <%end%>
           </div>
-          <div class="col-md-2">
+          <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
             <%= link_to used_car_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Used Car Loan</h1>
